updated the website still

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,5 @@ EMAIL_USERNAME="jephthahimade@gmail.com"
 EMAIL_PASSWORD="cebb czua poey eacy"
 
 # Admin Default Credentials (used in seed.js)
-ADMIN_EMAIL=admin@dxpress.uk
+ADMIN_EMAIL=support@dxpress.uk
 ADMIN_PASSWORD=admin123 
