--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
-    "nodemailer": "^6.9.10"
+    "nodemailer": "^6.9.10",
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
