Complete bug fixes and feature enhancements

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,9 @@ DHL_PICKUP_ACCOUNT=your_dhl_pickup_account
 DHL_ACCOUNT_NUMBER=your_dhl_account_number
 DHL_CLIENT_ID=your_dhl_client_id
 DHL_CLIENT_SECRET=your_dhl_client_secret
-DHL_API_BASE_URL=https://api-eu.dhl.com
+# DHL API URLs (sandbox for development, production for live)
+DHL_API_BASE_URL_SANDBOX=https://api-sandbox.dhl.com
+DHL_API_BASE_URL_PRODUCTION=https://express.api.dhl.com
 
 # Environment
 NODE_ENV=development
