--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "@paypal/paypal-server-sdk": "^1.1.0",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -25,8 +29,10 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.9.10",
+    "socket.io": "^4.8.1",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
